# exi

./: .gitignore  Cargo.toml  flake.nix  license.txt  readme.md
exicmd/: Cargo.toml
exicmd/src/: main.rs
src/: lib.rs  util.rs
src/decoder/: codetree.rs  datatypes.rs  errors.rs  grammars.rs  mod.rs  options.rs  quickxml.rs
test/: attrns.xml  attrns.xml.exi  comments.xml  comments.xml.exi  dtd.xml  dtd.xml.exi  fragment.xml  fragment.xml.exi  helloworld.xml.exi  interop.ysh  nested.xml  nested.xml.exi  notebook.xml  pis.xml  pis.xml.exi
