[package]
name = "exi"
description = "An Efficient Extensible Interchange (EXI) decoder."
repository = "https://github.com/wlcx/exi"
authors = ["Sam W <sam@wlcx.cc>"]
version = "0.1.0"
edition = "2021"
categories = ["parser-implementations", "encoding", "compression"]
keywords = ["exi", "xml", "decoder"]
readme = "readme.md"

[workspace]
members = [ "exicmd" ]

[dependencies]
log = "0.4.22"
nom = "7.1.3"
quick-xml = "0.36.1"

[dev-dependencies]
test-log = "0.2.16"
