[package]
name = "exi"
description = "An Efficient Extensible Interchange (EXI) decoder."
repository = "https://github.com/wlcx/exi"
authors = ["Sam W <sam@wlcx.cc>"]
version = "0.1.0"
edition = "2024"
categories = ["parser-implementations", "encoding", "compression"]
keywords = ["exi", "xml", "decoder"]
readme = "readme.md"

[features]
std = ["nom/std"]
defmt = ["dep:defmt"]
quickxml = ["dep:quick-xml"]

[workspace]
members = [ "exicmd" ]

[dependencies]
defmt = { version = "1.0.1", optional = true }
log = "0.4.22"
nom = { version = "7.1.3", features = [ "alloc" ], default-features = false }
quick-xml = {version = "0.36.1", optional=true}

[dev-dependencies]
pretty_assertions = "1.4.1"
test-log = "0.2.16"
